# meme_lab_dex

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
memelab/: README.md  next.config.ts  package.json
memelab/public/: elon_musk_royal_society.jpg:Zone.Identifier
memelab/scripts/: patch-csv-parse-default.mjs  test-upload-route.sh  verify-irys-import.mjs
memelab/src/app/: layout.tsx  page.tsx
memelab/src/app/account/[address]/: page.tsx
memelab/src/app/create/: page.tsx
memelab/src/components/: app-header.tsx  app-providers.tsx  wallet-dropdown.tsx
memelab/src/components/elements/: LaunchForm.tsx  TokenCard.tsx  TokenChart.tsx  TokenGrid.tsx  TradeForm.tsx  TradingChart.tsx
memelab/src/components/hooks/: useBondingCurveStatus.ts  useBuyTokens.ts  useChartData.ts  useClaimAlpha.ts  useCreateToken.ts  useDepositAlpha.ts  useMemelabProgram.ts  useSellTokens.ts  useTokenMetadata.ts  useTokens.ts  useUploadMetadata.ts
memelab/src/components/solana/: anchor-wallet.ts
memelab/src/components/ui/: LabButton.tsx  LabInput.tsx  Navbar.tsx
memelab/src/idl/: memelab_dex.json
memelab/src/lib/: anchorTypes.ts  utils.ts
programs/memelab-dex/: Cargo.toml
programs/memelab-dex/src/: errors.rs  lib.rs  maths.rs  state.rs
programs/memelab-dex/src/instructions/: mod.rs
programs/memelab-dex/src/instructions/admin/: initialize.rs  mod.rs
programs/memelab-dex/src/instructions/creator/: create_token.rs  mod.rs
programs/memelab-dex/src/instructions/user/: buy.rs  claim.rs  deposit.rs  mod.rs  sell.rs
tests/: memelab-dex.ts
(+2 files in other folders)
