[package]
name = "memelab_dex"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "memelab_dex"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
# FIX: Added "metadata" feature here!
anchor-spl = { version = "0.30.1", features = ["metadata"] }
solana-program = "1.18.20"
spl-associated-token-account = { version = "3.0.4", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "5.1.0" }
spl-token-metadata-interface = "0.3.5"
bytemuck = "1.14"